# python_exercism

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
card-games/: lists.py  lists_test.py
concepts/black-jack/: black_jack_test.py
concepts/cater-waiter/: sets_test.py  sets_test_data.py
concepts/currency-exchange/: exchange.py
concepts/ghost-gobble-arcade-game/: arcade_game_test.py
concepts/guidos-gorgeous-lasagna/: lasagna.py
concepts/haitanas-colossal-coaster/: list_methods_test.py
concepts/inventory-management/: dicts.py  dicts_test.py
concepts/little-sisters-vocab/: strings.py
concepts/locomotive-engineer/: locomotive_engineer.py  locomotive_engineer_test.py
concepts/mecha-munch-management/: dict_methods.py  dict_methods_test.py  dict_methods_test_data.py
concepts/meltdown-mitigation/: conditionals.py
concepts/plane-tickets/: generators.py  generators_test.py
concepts/tisbury-treasure-hunt/: tuples_tests.py
exercises/armstrong-numbers/: armstrong_numbers.py  armstrong_numbers_test.py
exercises/black-jack/: black_jack.py
exercises/bob/: bob.py  bob_test.py
exercises/cater-waiter/: sets.py
exercises/collatz-conjecture/: collatz_conjecture.py  collatz_conjecture_test.py
exercises/currency-exchange/: exchange.py  exchange_test.py
exercises/ellens-alien-game/: classes.py  classes_test.py
exercises/grains/: grains.py  grains_test.py
exercises/guidos-gorgeous-lasagna/: lasagna.py  lasagna_test.py
exercises/inventory-management/: dicts.py
haitanas-colossal-coaster/: list_methods.py
raindrops/: raindrops.py
(+12 files in other folders)
